src/objects/OUCServiceRequestConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is the custom setting stores parameters</description>
    <fields>
        <fullName>BulkCollectionScheduleQuestionCode__c</fullName>
        <label>Bulk Collection Schedule QuestionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BulkCollectionScheduleQuestion__c</fullName>
        <description>This is for testing purpose</description>
        <label>Bulk Collection Schedule Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BulkScheduleDailyStopLimit__c</fullName>
        <description>This determines the Daily schedule limit</description>
        <label>BulkSchedule DailyStopLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultBusinesshoursName__c</fullName>
        <label>Default Businesshours Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofDays__c</fullName>
        <description>This is for test purpose now ..</description>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OUC ServiceRequest Config</label>
</CustomObject>